# TRIBE

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
analytical/: CostFunctionN2.py  figure.ipynb  info.txt  kraus_dg3_transformation.nb  optimizationCode.py  rsb_code_project(2).nb  rsb_code_project(4).nb
analytical/plotting/: main.py  plots.ipynb  pyproject.toml
notebooks/: test.ipynb
src/: __init__.py
